--- a/index.htm
+++ b/index.htm
@@ -4,92 +4,97 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
-  <title>My Portfolio</title>
+  <title>Biography</title>
 </head>
 
 <body>
+  <!-- Main Heading -->
   <header>
-    <nav>
-      <h1>MY Resume</h1>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Education</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <div class="social">
-        <a href="#"><i class="ri-github-fill"></i></a>
-        <a href="#"><i class="ri-twitter-fill"></i></a>
-        <a href="#"><i class="ri-instagram-fill"></i></a>
-        <a href="#"><i class="ri-linkedin-box-fill"></i></a>
-      </div>
-    </nav>
+    <center>
+      <h1>Ilias Ahmed</h1>
+      <p><i>Software Engineer</i></p>
+    </center>
   </header>
   <hr>
-  <!-- Header ends here -->
-  <main>
-    <div class="profile_container">
-      <div class="profile_image">
-        <img src="https://cdn.pixabay.com/photo/2023/11/21/13/29/ai-generated-8403411_1280.jpg" alt="profile_image"
-          width="100">
-        <div class="profile_info">
-          <h1>Ilias Ahmed</h1>
-          <h3>FullStack Developer | Software Engineer</h3>
-        </div>
-      </div>
-      <div class="contact_info">
-        <a href="mailto:<EMAIL>"><i class="ri-phone-line"></i>
-          (+91)9627646947 <EMAIL>
-        </a>
-        <a href="https://www.linkedin.com/in/iliasahmed/"><i class="ri-mail-line"></i>ggdiojgsdi@gmail.com</a>
-        <a href="https://github.com/iliasahmed"><i class="ri-map-pin-line"></i>pin-788532</a>
-      </div>
-    </div>
-    <hr>
-    <!-- Profile ends here -->
-    <div class="education_container">
-      <h2>Education</h2>
-      <div class="education_cards">
-        <div class="education_card1">
-          <i class="ri-graduation-cap-line"></i>
-          <h3>High School Leaving Certificate(HSLC)</h3>
-          <p>Year-2019</p>
-          <p>Percentage- 60%</p>
-          <h4>Baguriguri High School</h4>
-        </div>
-        <hr>
-        <div class="education_card2">
-          <i class="ri-graduation-cap-line"></i>
-          <h3>Higher Secondary School(HSC)</h3>
-          <p>Year-2021</p>
-          <p>Percentage- 67%</p>
-          <h4>Kalatoli Kathmi Anchalik Senior Secondary School</h4>
-        </div>
-        <hr>
-        <div class="education_card3">
-          <i class="ri-graduation-cap-line"></i>
-          <h3>Bachelor of Computer Application(BCA)</h3>
-          <p>Year-2022-25</p>
-          <p>Percentage- 8 CGPA</p>
-          <h4>Dispur College</h4>
-        </div>
-        <hr>
-        <div class="education_card4">
-          <i class="ri-graduation-cap-line"></i>
-          <h3>Master of Computer Application(MCA)</h3>
-          <p>Year-2027</p>
-          <p>Percentage- 8.5 CGPA</p>
-          <p>XYZ IIT/NIT</p>
-        </div>
-        <hr>
-      </div>
-    </div>
-    <!-- Education ends here -->
-  </main>
-  <!-- Main ends here -->
-  <h4>View Work Experience</h4>
-  <a href="work.html"><button>View</button></a>
+
+  <!-- About Me Section -->
+  <section>
+    <h2>About Me</h2>
+    <p>Hello, I am <span><i>Ilias Ahmed</i></span>, a software engineer with a passion for building technology.</p>
+  </section>
+  <hr>
+
+  <!-- Skills Section -->
+  <section>
+    <h2>Skills</h2>
+    <table>
+      <tr>
+        <td>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>React</li>
+            <li>Express</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </section>
+  <hr>
+
+  <!-- Hobbies Section -->
+  <section>
+    <h2>Hobbies</h2>
+    <table>
+      <tr>
+        <td>
+          <ul>
+            <li>Traveling</li>
+            <li>Photography</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>Reading</li>
+            <li>Coding</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </section>
+  <hr>
+
+  <!-- Education Section -->
+  <section>
+    <h2>Education</h2>
+    <p>I completed my <b>Bachelor of Computer Application</b> from <b>Dispur College</b>.</p>
+  </section>
+  <hr>
+
+  <!-- Work Experience Section -->
+  <section>
+    <h2>Work Experience</h2>
+    <article>
+      <h3>Software Engineer, Google</h3>
+      <p><i>November 2022 - Present</i></p>
+      <ul>
+        <li>Developed and maintained web applications using React and Node.js</li>
+        <li>Collaborated with cross-functional teams to deliver high-quality software</li>
+        <li>Participated in code reviews and mentored junior developers</li>
+      </ul>
+    </article>
+  </section>
+  <hr>
+
+  <!-- Footer Section -->
+  <footer>
+    <center>&copy; 2024 Ilias Ahmed. All rights reserved.</center>
+  </footer>
 </body>
 
 </html>
