refactor: clean up HTML structure and improve readability

--- a/index.htm
+++ b/index.htm
@@ -1,100 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Biography</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biography</title>
-</head>
+  <body>
+    <!-- Main Heading -->
+    <header>
+      <center>
+        <h1>Ilias Ahmed</h1>
+        <p><i>Software Engineer</i></p>
+      </center>
+    </header>
+    <hr />
 
-<body>
-  <!-- Main Heading -->
-  <header>
-    <center>
-      <h1>Ilias Ahmed</h1>
-      <p><i>Software Engineer</i></p>
-    </center>
-  </header>
-  <hr>
+    <!-- About Me Section -->
+    <section>
+      <h2>About Me</h2>
+      <p>
+        Hello, I am <span><i>Ilias Ahmed</i></span
+        >, a software engineer with a passion for building technology.
+      </p>
+    </section>
+    <hr />
 
-  <!-- About Me Section -->
-  <section>
-    <h2>About Me</h2>
-    <p>Hello, I am <span><i>Ilias Ahmed</i></span>, a software engineer with a passion for building technology.</p>
-  </section>
-  <hr>
+    <!-- Skills Section -->
+    <section>
+      <h2>Skills</h2>
+      <table>
+        <tr>
+          <td>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li>React</li>
+              <li>Express</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </section>
+    <hr />
 
-  <!-- Skills Section -->
-  <section>
-    <h2>Skills</h2>
-    <table>
-      <tr>
-        <td>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>React</li>
-            <li>Express</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
-  </section>
-  <hr>
+    <!-- Hobbies Section -->
+    <section>
+      <h2>Hobbies</h2>
+      <table>
+        <tr>
+          <td>
+            <ul>
+              <li>Traveling</li>
+              <li>Photography</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li>Reading</li>
+              <li>Coding</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </section>
+    <hr />
 
-  <!-- Hobbies Section -->
-  <section>
-    <h2>Hobbies</h2>
-    <table>
-      <tr>
-        <td>
-          <ul>
-            <li>Traveling</li>
-            <li>Photography</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>Reading</li>
-            <li>Coding</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
-  </section>
-  <hr>
+    <!-- Education Section -->
+    <section>
+      <h2>Education</h2>
+      <p>
+        I completed my <b>Bachelor of Computer Application</b> from
+        <b>Dispur College</b>.
+      </p>
+    </section>
+    <hr />
 
-  <!-- Education Section -->
-  <section>
-    <h2>Education</h2>
-    <p>I completed my <b>Bachelor of Computer Application</b> from <b>Dispur College</b>.</p>
-  </section>
-  <hr>
+    <!-- Work Experience Section -->
+    <section>
+      <h2>Work Experience</h2>
+      <article>
+        <h3>Software Engineer, Google</h3>
+        <p><i>November 2022 - Present</i></p>
+        <ul>
+          <li>
+            Developed and maintained web applications using React and Node.js
+          </li>
+          <li>
+            Collaborated with cross-functional teams to deliver high-quality
+            software
+          </li>
+          <li>Participated in code reviews and mentored junior developers</li>
+        </ul>
+      </article>
+    </section>
+    <hr />
 
-  <!-- Work Experience Section -->
-  <section>
-    <h2>Work Experience</h2>
-    <article>
-      <h3>Software Engineer, Google</h3>
-      <p><i>November 2022 - Present</i></p>
-      <ul>
-        <li>Developed and maintained web applications using React and Node.js</li>
-        <li>Collaborated with cross-functional teams to deliver high-quality software</li>
-        <li>Participated in code reviews and mentored junior developers</li>
-      </ul>
-    </article>
-  </section>
-  <hr>
-
-  <!-- Footer Section -->
-  <footer>
-    <center>&copy; 2024 Ilias Ahmed. All rights reserved.</center>
-  </footer>
-</body>
-
+    <!-- Footer Section -->
+    <footer>
+      <center>&copy; 2024 Ilias Ahmed. All rights reserved.</center>
+    </footer>
+  </body>
 </html>
